defined JSON for keybinds, loop through to prove, updated HTML to include all IDs

--- a/index.html
+++ b/index.html
@@ -331,101 +331,102 @@
       </div><!-- #keyboard -->
       <div id="center_chunk">
         <div class="row" id="center_fkey_block">
-          <div class="key" title="" style="background-color:#"><div class="keyboard_layout">prt scr</div><h2 class="key_title"></h2></div>
-            <div class="key" title="" style="background-color:#"><div class="keyboard_layout">scr lck</div><h2 class="key_title"></h2></div>
-            <div class="key" title="" style="background-color:#"><div class="keyboard_layout">pause</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_prtscr" title="" style="background-color:#"><div class="keyboard_layout">prt scr</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_scrlck" title="" style="background-color:#"><div class="keyboard_layout">scr lck</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_pause" title="" style="background-color:#"><div class="keyboard_layout">pause</div><h2 class="key_title"></h2></div>
         </div>
         <div style="border:1px solid #000;">
           <div class="row">
-            <div class="key" title="" style="background-color:#"><div class="keyboard_layout">insert</div><h2 class="key_title"></h2></div>
-            <div class="key" title="" style="background-color:#"><div class="keyboard_layout">home</div><h2 class="key_title"></h2></div>
-            <div class="key" title="exec nn_keybinds.cfg" style="background-color:#F58D80"><div class="keyboard_layout">page up</div><h2 class="key_title">Ninja Binds</h2></div>
+            <div class="key" id="key_insert" title="" style="background-color:#"><div class="keyboard_layout">insert</div><h2 class="key_title"></h2></div>
+            <div class="key" id="key_home" title="" style="background-color:#"><div class="keyboard_layout">home</div><h2 class="key_title"></h2></div>
+            <div class="key" id="key_page_up" title="exec nn_keybinds.cfg" style="background-color:#F58D80"><div class="keyboard_layout">page up</div><h2 class="key_title">Ninja Binds</h2></div>
           </div>
           <div class="row">
-            <div class="key" title="" style="background-color:#"><div class="keyboard_layout">delete</div><h2 class="key_title"></h2></div>
-            <div class="key" title="" style="background-color:#"><div class="keyboard_layout">end</div><h2 class="key_title"></h2></div>
-            <div class="key" title="exec nn_video.cfg" style="background-color:#F58D80"><div class="keyboard_layout">page down</div><h2 class="key_title">Video Binds</h2></div>
+            <div class="key" id="key_delete" title="" style="background-color:#"><div class="keyboard_layout">delete</div><h2 class="key_title"></h2></div>
+            <div class="key" id="key_end" title="" style="background-color:#"><div class="keyboard_layout">end</div><h2 class="key_title"></h2></div>
+            <div class="key" id="key_page_down" title="exec nn_video.cfg" style="background-color:#F58D80"><div class="keyboard_layout">page down</div><h2 class="key_title">Video Binds</h2></div>
           </div>
         </div>
         <div class="row" id="arrows">
-          <div class="key" title="" style="border:2px solid #000;border-bottom:none;background-color:#"><div class="keyboard_layout">up</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_up" title="" style="border:2px solid #000;border-bottom:none;background-color:#"><div class="keyboard_layout">up</div><h2 class="key_title"></h2></div>
         </div>
         <div class="row" id="arrows_bottom">
-          <div class="key" title="" style="background-color:#"><div class="keyboard_layout">left</div><h2 class="key_title"></h2></div>
-          <div class="key" title="" style="background-color:#"><div class="keyboard_layout">down</div><h2 class="key_title"></h2></div>
-          <div class="key" title="" style="background-color:#"><div class="keyboard_layout">right</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_left" title="" style="background-color:#"><div class="keyboard_layout">left</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_down" title="" style="background-color:#"><div class="keyboard_layout">down</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_right" title="" style="background-color:#"><div class="keyboard_layout">right</div><h2 class="key_title"></h2></div>
         </div>
       </div><!-- #center_chunk -->
       <div id="numpad">
         <div class="row">
-          <div class="key" title="" style="background-color:#"><div class="keyboard_layout">numlock</div><h2 class="key_title"></h2></div>
-          <div class="key" title="say_team ^1Dropped Flag ^7(^4l:^5%d^7); g_waypointsprite_team_here_d" style="background-color:#C2DBF2"><div class="keyboard_layout">/</div><h2 class="key_title">dropped flag</h2></div>
-          <div class="key" title="say_team ^2Killed Flagcarrier ^7(^4l:^5%y^7); g_waypointsprite_team_p" style="background-color:#C2DBF2"><div class="keyboard_layout">*</div><h2 class="key_title">Killed FC</h2></div>
-          <div class="key" title="say hi / good luck and have fun (-.-) \m/" style="background-color:#BAB0BF"><div class="keyboard_layout">-</div><h2 class="key_title">hi / gl</h2></div>
+          <div class="key" id="key_num_lock" title="" style="background-color:#"><div class="keyboard_layout">numlock</div><h2 class="key_title"></h2></div>
+          <div class="key" id="key_num_slash" title="say_team ^1Dropped Flag ^7(^4l:^5%d^7); g_waypointsprite_team_here_d" style="background-color:#C2DBF2"><div class="keyboard_layout">/</div><h2 class="key_title">dropped flag</h2></div>
+          <div class="key" id="key_num_multiply" title="say_team ^2Killed Flagcarrier ^7(^4l:^5%y^7); g_waypointsprite_team_p" style="background-color:#C2DBF2"><div class="keyboard_layout">*</div><h2 class="key_title">Killed FC</h2></div>
+          <div class="key" id="key_num_minus" title="say hi / good luck and have fun (-.-) \m/" style="background-color:#BAB0BF"><div class="keyboard_layout">-</div><h2 class="key_title">hi / gl</h2></div>
         </div>
         <div class="row">
-          <div class="key" title="say_team ^5Defending ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">7</div><h2 class="key_title">Defending</h2></div>
-          <div class="key" title="say_team ^5Roaming ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">8</div><h2 class="key_title">Roaming</h2></div>
-          <div class="key" title="say_team ^5Attacking ^7(^4l:%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">9</div><h2 class="key_title">Attacking</h2></div>
-          <div class="key" title="say Good Game!" id="numpad_plus"style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">+</div><h2 class="key_title">Good Game</h2></div>
-          <div class="key" title="say_team ^1Enemy Seen ^7(^4l:^5%y^7); g_waypointsprite_team_danger_p" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">6</div><h2 class="key_title">Enemy Seen</h2></div>
-          <div class="key" title="say_team ^3Need Help ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_helpme" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">5</div><h2 class="key_title">Need Help</h2></div>
-          <div class="key" title="say_team ^1Negative" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">4</div><h2 class="key_title">Negative</h2></div>
+          <div class="key" id="key_num_7" title="say_team ^5Defending ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">7</div><h2 class="key_title">Defending</h2></div>
+          <div class="key" id="key_num_8" title="say_team ^5Roaming ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">8</div><h2 class="key_title">Roaming</h2></div>
+          <div class="key" id="key_num_9" title="say_team ^5Attacking ^7(^4l:%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">9</div><h2 class="key_title">Attacking</h2></div>
+          <div class="key" id="key_num_plus" title="say Good Game!" id="numpad_plus"style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">+</div><h2 class="key_title">Good Game</h2></div>
+          <div class="key" id="key_num_6" title="say_team ^1Enemy Seen ^7(^4l:^5%y^7); g_waypointsprite_team_danger_p" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">6</div><h2 class="key_title">Enemy Seen</h2></div>
+          <div class="key" id="key_num_5" title="say_team ^3Need Help ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_helpme" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">5</div><h2 class="key_title">Need Help</h2></div>
+          <div class="key" id="key_num_4" title="say_team ^1Negative" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">4</div><h2 class="key_title">Negative</h2></div>
         </div>
         <div class="row">
-          <div class="key" title="say_team ^4Quad Soon" style="background-color:#C2DBF2"><div class="keyboard_layout">1</div><h2 class="key_title">Quad Soon</h2></div>
-          <div class="key" title="say_team ^6Free Item %x ^7(^4l:^5%y^7); g_waypointsprite_team_here_p" style="background-color:#C2DBF2"><div class="keyboard_layout">2</div><h2 class="key_title">Free Item</h2></div>
-          <div class="key" title="say_team ^6Took Item ^7(^4l:^5%l^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">3</div><h2 class="key_title">Took Item</h2></div>
-          <div class="key" title="say :-) / nice on" id="numpad_enter" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">enter</div><h2 class="key_title">Nice One</h2></div>
-          <div class="key" title="messagemode2" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">.</div><h2 class="key_title">teamchat</h2></div>
-          <div class="key" title="messagemode" id="numpad_insert" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">0</div><h2 class="key_title">chat</h2></div>
+          <div class="key" id="key_num_1" title="say_team ^4Quad Soon" style="background-color:#C2DBF2"><div class="keyboard_layout">1</div><h2 class="key_title">Quad Soon</h2></div>
+          <div class="key" id="key_num_2" title="say_team ^6Free Item %x ^7(^4l:^5%y^7); g_waypointsprite_team_here_p" style="background-color:#C2DBF2"><div class="keyboard_layout">2</div><h2 class="key_title">Free Item</h2></div>
+          <div class="key" id="key_num_3" title="say_team ^6Took Item ^7(^4l:^5%l^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">3</div><h2 class="key_title">Took Item</h2></div>
+          <div class="key" id="key_num_enter" title="say :-) / nice on" id="numpad_enter" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">enter</div><h2 class="key_title">Nice One</h2></div>
+          <div class="key" id="key_num_period" title="messagemode2" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">.</div><h2 class="key_title">teamchat</h2></div>
+          <div class="key" id="key_num_0" title="messagemode" id="numpad_insert" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">0</div><h2 class="key_title">chat</h2></div>
         </div>
       </div><!-- #numpad -->
     </div><!-- #keyboard_container -->
     <div id="mouse_container">
       <div id="mouse_binds_left">
         <div class="mouse_bind" title="+fire">
-                <div class="mouse_layout" id="mouse_1">mouse 1</div>
+          <div class="mouse_layout" id="mouse_1">mouse 1</div>
           <h2 class="mouse_title">Primary Fire</h2>
         </div>
         <div class="mouse_bind" title="+hook">
-                <div class="mouse_layout" id="mouse_2">mouse 4</div>
+          <div class="mouse_layout" id="mouse_2">mouse 4</div>
           <h2 class="mouse_title">Hook</h2>
         </div>
         <div class="mouse_bind" title="+aot_menu">
-                <div class="mouse_layout" id="mouse_3">mouse 5</div>
+          <div class="mouse_layout" id="mouse_3">mouse 5</div>
           <h2 class="mouse_title">CTF Menu</h2>
         </div>
         <div class="mouse_bind" id="mouse_bind_last_l" title="+aot_temp_zoom">
-                <div class="mouse_layout" id="mouse_4">mouse 3</div>
+          <div class="mouse_layout" id="mouse_4">mouse 3</div>
           <h2 class="mouse_title">Zoom</h2>
         </div>
       </div>
       <img src="img/mouse_lines.gif" style="float:left;margin:0;" />
       <div id="mouse_binds_right">
         <div class="mouse_bind" title="+fire2">
-                <div class="mouse_layout" id="mouse_5">mouse 2</div>
+          <div class="mouse_layout" id="mouse_5">mouse 2</div>
           <h2 class="mouse_title">Secondary Fire</h2>
         </div>
         <div class="mouse_bind" title="">
-                <div class="mouse_layout" id="mouse_6">mouse 6</div>
+          <div class="mouse_layout" id="mouse_6">mouse 6</div>
           <h2 class="mouse_title"></h2>
         </div>
         <div class="mouse_bind" title="">
-                <div class="mouse_layout" id="mouse_7">mouse 7</div>
+          <div class="mouse_layout" id="mouse_7">mouse 7</div>
           <h2 class="mouse_title"></h2>
         </div>
         <div class="mouse_bind" id="mouse_bind_last_r1" title="prevweapon">
-                <div class="mouse_layout" id="mouse_8">mwheel up</div>
+          <div class="mouse_layout" id="mouse_wheel_up">mwheel up</div>
           <h2 class="mouse_title">Previous Weapon</h2>
         </div>
         <div class="mouse_bind" id="mouse_bind_last_r2" title="nextweapon">
-                <div class="mouse_layout" id="mouse_9">mwheel down</div>
+          <div class="mouse_layout" id="mouse_wheel_down">mwheel down</div>
           <h2 class="mouse_title">Next Weapon</h2>
         </div>
       </div>
     </div><!-- #mouse_container -->
   </div><!-- #bind_container -->
 
+  <script src="js/scripts.js"></script>
 </body>
 </html>
