had a little regression with the ids

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <div class="key" id="key_num_7" title="say_team ^5Defending ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">7</div><h2 class="key_title">Defending</h2></div>
           <div class="key" id="key_num_8" title="say_team ^5Roaming ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">8</div><h2 class="key_title">Roaming</h2></div>
           <div class="key" id="key_num_9" title="say_team ^5Attacking ^7(^4l:%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">9</div><h2 class="key_title">Attacking</h2></div>
-          <div class="key" id="key_num_plus" title="say Good Game!" id="numpad_plus"style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">+</div><h2 class="key_title">Good Game</h2></div>
+          <div class="key" id="key_num_plus" title="say Good Game!" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">+</div><h2 class="key_title">Good Game</h2></div>
           <div class="key" id="key_num_6" title="say_team ^1Enemy Seen ^7(^4l:^5%y^7); g_waypointsprite_team_danger_p" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">6</div><h2 class="key_title">Enemy Seen</h2></div>
           <div class="key" id="key_num_5" title="say_team ^3Need Help ^7(^4l:^5%l^7) ^7(^1h:%h^7 ^2a:%a^7 ^6w:%w^7); g_waypointsprite_team_helpme" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">5</div><h2 class="key_title">Need Help</h2></div>
           <div class="key" id="key_num_4" title="say_team ^1Negative" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">4</div><h2 class="key_title">Negative</h2></div>
@@ -376,9 +376,9 @@
           <div class="key" id="key_num_1" title="say_team ^4Quad Soon" style="background-color:#C2DBF2"><div class="keyboard_layout">1</div><h2 class="key_title">Quad Soon</h2></div>
           <div class="key" id="key_num_2" title="say_team ^6Free Item %x ^7(^4l:^5%y^7); g_waypointsprite_team_here_p" style="background-color:#C2DBF2"><div class="keyboard_layout">2</div><h2 class="key_title">Free Item</h2></div>
           <div class="key" id="key_num_3" title="say_team ^6Took Item ^7(^4l:^5%l^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">3</div><h2 class="key_title">Took Item</h2></div>
-          <div class="key" id="key_num_enter" title="say :-) / nice on" id="numpad_enter" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">enter</div><h2 class="key_title">Nice One</h2></div>
+          <div class="key" id="key_num_enter" title="say :-) / nice on" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">enter</div><h2 class="key_title">Nice One</h2></div>
           <div class="key" id="key_num_period" title="messagemode2" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">.</div><h2 class="key_title">teamchat</h2></div>
-          <div class="key" id="key_num_0" title="messagemode" id="numpad_insert" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">0</div><h2 class="key_title">chat</h2></div>
+          <div class="key" id="key_num_insert" title="messagemode" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">0</div><h2 class="key_title">chat</h2></div>
         </div>
       </div><!-- #numpad -->
     </div><!-- #keyboard_container -->
