0 not insert id

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           <div class="key" id="key_num_3" title="say_team ^6Took Item ^7(^4l:^5%l^7); g_waypointsprite_team_here" style="background-color:#C2DBF2"><div class="keyboard_layout">3</div><h2 class="key_title">Took Item</h2></div>
           <div class="key" id="key_num_enter" title="say :-) / nice on" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">enter</div><h2 class="key_title">Nice One</h2></div>
           <div class="key" id="key_num_period" title="messagemode2" style="float:right;background-color:#C2DBF2"><div class="keyboard_layout">.</div><h2 class="key_title">teamchat</h2></div>
-          <div class="key" id="key_num_insert" title="messagemode" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">0</div><h2 class="key_title">chat</h2></div>
+          <div class="key" id="key_num_0" title="messagemode" style="float:right;background-color:#BAB0BF"><div class="keyboard_layout">0</div><h2 class="key_title">chat</h2></div>
         </div>
       </div><!-- #numpad -->
     </div><!-- #keyboard_container -->
