clean out the HTML more and port styles to css file

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               <div class="keyboard_layout">alt</div>
               <h2></h2>
             </div>
-            <div class="key" id="key_right_special" title="">
+            <div class="key" id="key_right_special">
               <div class="keyboard_layout">opt</div>
               <h2></h2>
             </div>
@@ -337,67 +337,67 @@
       </div><!-- #keyboard -->
       <div id="center_chunk">
         <div class="row" id="center_fkey_block">
-          <div class="key" id="key_prtscr" title="">
+          <div class="key" id="key_prtscr">
             <div class="keyboard_layout">prt scr</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
-          <div class="key" id="key_scrlck" title="">
+          <div class="key" id="key_scrlck">
             <div class="keyboard_layout">scr lck</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
-          <div class="key" id="key_pause" title="">
+          <div class="key" id="key_pause">
             <div class="keyboard_layout">pause</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
         </div>
-        <div style="border:1px solid #000;">
+        <div id="home_block">
           <div class="row">
-            <div class="key" id="key_insert" title="">
+            <div class="key" id="key_insert">
               <div class="keyboard_layout">insert</div>
-              <h2 class="key_title"></h2>
+              <h2></h2>
             </div>
-            <div class="key" id="key_home" title="">
+            <div class="key" id="key_home">
               <div class="keyboard_layout">home</div>
-              <h2 class="key_title"></h2>
+              <h2></h2>
             </div>
             <div class="key" id="key_page_up">
               <div class="keyboard_layout">page up</div>
-              <h2 class="key_title"></h2>
+              <h2></h2>
             </div>
           </div>
           <div class="row">
-            <div class="key" id="key_delete" title="">
+            <div class="key" id="key_delete">
               <div class="keyboard_layout">delete</div>
-              <h2 class="key_title"></h2>
+              <h2></h2>
             </div>
-            <div class="key" id="key_end" title="">
+            <div class="key" id="key_end">
               <div class="keyboard_layout">end</div>
-              <h2 class="key_title"></h2>
+              <h2></h2>
             </div>
             <div class="key" id="key_page_down">
               <div class="keyboard_layout">page down</div>
-              <h2 class="key_title"></h2>
+              <h2></h2>
             </div>
           </div>
-        </div>
+        </div><!-- #home_block -->
         <div class="row" id="arrows">
-          <div class="key" id="key_up" title="" style="border:2px solid #000;border-bottom:none;background-color:#">
+          <div class="key" id="key_up">
             <div class="keyboard_layout">up</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
         </div>
         <div class="row" id="arrows_bottom">
-          <div class="key" id="key_left" title="">
+          <div class="key" id="key_left">
             <div class="keyboard_layout">left</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
-          <div class="key" id="key_down" title="">
+          <div class="key" id="key_down">
             <div class="keyboard_layout">down</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
-          <div class="key" id="key_right" title="">
+          <div class="key" id="key_right">
             <div class="keyboard_layout">right</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
         </div>
       </div><!-- #center_chunk -->
@@ -405,75 +405,75 @@
         <div class="row">
           <div class="key" id="key_num_lock">
             <div class="keyboard_layout">numlock</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_slash">
             <div class="keyboard_layout">/</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_multiply">
             <div class="keyboard_layout">*</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_minus">
             <div class="keyboard_layout">-</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
         </div>
         <div class="row">
           <div class="key" id="key_num_7">
             <div class="keyboard_layout">7</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_8">
             <div class="keyboard_layout">8</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_9">
             <div class="keyboard_layout">9</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_plus">
             <div class="keyboard_layout">+</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_6">
             <div class="keyboard_layout">6</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_5">
             <div class="keyboard_layout">5</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_4">
             <div class="keyboard_layout">4</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
         </div>
         <div class="row">
           <div class="key" id="key_num_1">
             <div class="keyboard_layout">1</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_2">
             <div class="keyboard_layout">2</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_3">
             <div class="keyboard_layout">3</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_enter">
             <div class="keyboard_layout">enter</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_period">
             <div class="keyboard_layout">.</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
           <div class="key" id="key_num_0">
             <div class="keyboard_layout">0</div>
-            <h2 class="key_title"></h2>
+            <h2></h2>
           </div>
         </div>
       </div><!-- #numpad -->
@@ -496,8 +496,8 @@
           <div class="mouse_layout">mouse 3</div>
           <h2 class="mouse_title"></h2>
         </div>
-      </div>
-      <img src="img/mouse_lines.gif" style="float:left;margin:0;" />
+      </div><!-- #mouse_binds_left -->
+      <img src="img/mouse_lines.gif" id="mouse_lines" />
       <div id="mouse_binds_right">
         <div class="mouse_bind" id="mouse_2">
           <div class="mouse_layout">mouse 2</div>
@@ -519,7 +519,7 @@
           <div class="mouse_layout">mwheel down</div>
           <h2 class="mouse_title"></h2>
         </div>
-      </div>
+      </div><!-- #mouse_binds_right -->
     </div><!-- #mouse_container -->
   </div><!-- #bind_container -->
 
