wrote the basic parsing functionality

--- a/index.html
+++ b/index.html
@@ -523,6 +523,10 @@
     </div><!-- #mouse_container -->
   </div><!-- #bind_container -->
 
+  <div id="stuff">
+    <p>Open your console to see more stuff: <a id="kbx-to-xon">KBX to XON</a> | <a id="parse-vanilla">CFG to KBX</a> | <a id="load-parsed-cfg">Load parsed CFG</a> | <a id="load-ninja-binds">Load Ninja Binds</a></p>
+  </div>
+
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
