oops these IDs were in the wrong place

--- a/index.html
+++ b/index.html
@@ -504,12 +504,12 @@
           <div>mouse 2</div>
           <h2></h2>
         </div>
-        <div class="mouse_bind">
-          <div id="mouse_6">mouse 6</div>
+        <div class="mouse_bind" id="mouse_6">
+          <div>mouse 6</div>
           <h2></h2>
         </div>
-        <div class="mouse_bind">
-          <div id="mouse_7">mouse 7</div>
+        <div class="mouse_bind" id="mouse_7">
+          <div>mouse 7</div>
           <h2></h2>
         </div>
         <div class="mouse_bind" id="mouse_wheel_up">
