You can now load kbx

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <li><a href="#about-info" id="about">About</a></li>
     <li><a href="#parse-my-config" id="parse">Parse My Config</a></li>
     <li><a href="#download-my-config" id="download">Download My Config</a></li>
-    <li><a href="#download-my-config" id="download2">Download My KBX</a></li>
+    <li><a href="#download-my-kbx" id="download2">Download My KBX</a></li>
+    <li><a href="#load-my-kbx" id="load">Load My KBX</a></li>
     <li>
       Debug
       <ul>
@@ -591,6 +592,15 @@
     <br>
     Send this crap to -z- if you have an issue or something
     <textarea id="d_my_kbx"></textarea>
+  </div>
+
+  <div id="load-my-kbx" class="popup">
+    <a class="close">X</a>
+    <br>
+    <textarea id="my_kbx"></textarea>
+    <div class="edit_row">
+      <a id="load_my_kbx">Load It</a>
+    </div>
   </div>
 
 </body>
