--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="js/lib/colpick.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="js/action_title.js"></script>
 </head>
 
 <body>
